--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,21 +4,9 @@ updates:
   directory: "/"
   schedule:
     interval: daily
-    time: "19:30"
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: nokogiri
-    versions:
-    - 1.11.1
-    - 1.11.2
-  - dependency-name: rspec-rails
-    versions:
-    - 4.0.2
-    - 4.1.0
-    - 5.0.0
-  - dependency-name: carrierwave
-    versions:
-    - 2.1.1
-  - dependency-name: breadcrumbs_on_rails
-    versions:
-    - 4.0.0
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
