--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 /config/credentials/staging.key
 /config/credentials/production.key
 /config/credentials/test.key
+/config/master.key
 local_secret.txt
 .env
 
