1106 prior to refactoring data model code

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,13 @@
+APPSIGNAL_APP_NAME=
+APPSIGNAL_PUSH_API_KEY=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 CONTACT_MAIL_RECIPIENTS=
+DATABASE_URL=
+MAILJET_API_KEY=
+MAILJET_SECRET_KEY=
+MAILJET_DEFAULT_FROM=
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
-RUBY_YJIT_ENABLE=1
+RUBY_YJIT_ENABLE=
+SECRET_KEY_BASE=
